--- a/01-HTML-Git-CSS/01-Activities/16-Stu_HTML-display/Unsolved/assets/css/style.css
+++ b/01-HTML-Git-CSS/01-Activities/16-Stu_HTML-display/Unsolved/assets/css/style.css
@@ -15,6 +15,7 @@ ul {
 /* List items in navigation bar */
 li {
   /* TODO: Add your code here */
+  display: inline;
   list-style-type: none;
   font-size: 40px;
 }
@@ -23,6 +24,7 @@ li {
 img {
   /* TODO: Add your code here */
   margin: 0 auto;
+  display:block
 }
 
 #item-1 {
@@ -34,11 +36,12 @@ img {
 }
 
 #item-3 {
+  
   background-color: #999900;
 }
 
 /* Box 3 */
 #image-3 {
   /* TODO: Add your code here */
-  display: none;
+  display:
 }
