--- a/02-Advanced-CSS/01-Activities/16-Stu_Pseudo-Classes/Unsolved/assets/css/style.css
+++ b/02-Advanced-CSS/01-Activities/16-Stu_Pseudo-Classes/Unsolved/assets/css/style.css
@@ -19,7 +19,7 @@ h1 {
 
 h2 {
   margin: 2% 0;
-  font-size: 250%;
+  font-size: 150%;
 }
 
 nav ul {
@@ -87,13 +87,29 @@ footer {
   color: #fff;
 }
 
-/* TODO: Add styles that will hide the resource links by default */
+/* Hide the resource links by default */
+.resources .links {
+  display: none;
+  padding: 1% 0;
+}
 
+/* Display the links when the parent is in a hover state */
+.resources:hover .links {
+  display: block;
+}
 
+.resources h3 {
+  font-size: 150%;
+}
 
-/* TODO: Add styles that will display the links when the mouse hovers over the parent element */
+.links a {
+  color: #772014;
+  text-decoration: none;
+}
 
-
+.links a:hover {
+  text-decoration: underline;
+}
 
 @media screen and (max-width: 768px) {
   header, main {
