--- a/02-Advanced-CSS/01-Activities/18-Stu_Pseudo-Elements/Solved/assets/css/style.css
+++ b/02-Advanced-CSS/01-Activities/18-Stu_Pseudo-Elements/Solved/assets/css/style.css
@@ -63,8 +63,8 @@ article p {
 span[data-descr] {
   position: relative;
   text-decoration: underline;
-  color: #000;
-  cursor: grab;
+  color: black;
+  cursor: progress ;
 }
 
 /* Position tooltip above the term/phrase, same color as header and nav links, no border-radius, smaller font size */
@@ -77,7 +77,7 @@ span[data-descr]:hover::after {
   border: 1px #aaaaaa solid;
   background-color: #13293d;
   padding: 12px;
-  color: #fff;
+  color: aliceblue
   font-size: 80%;
   z-index: 1;
 }
